//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Parent {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  verified Boolean [default: false]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  Child Child [not null]
}

Table Child {
  id String [pk]
  name String [not null]
  age Int [not null]
  points Int [default: 0]
  parent Parent [not null]
  parentId String [not null]
  accessCode String [unique, not null]
  verified Boolean [default: false]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  AnsweredExercise AnsweredExercise [not null]
  EarnedBadge EarnedBadge [not null]
}

Table Subject {
  id Int [pk, increment]
  name String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  Exercise Exercise [not null]
}

Table Exercise {
  id String [pk]
  title String [not null]
  description String [not null]
  subject Subject [not null]
  subjectId Int [not null]
  difficulty Int [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  Answer Answer [not null]
  AnsweredExercise AnsweredExercise [not null]
}

Table Answer {
  id String [pk]
  exercise Exercise [not null]
  exerciseId String [not null]
  answer String [not null]
  isCorrect Boolean [not null, default: false]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  AnsweredExercise AnsweredExercise [not null]
}

Table AnsweredExercise {
  id String [pk]
  exercise Exercise [not null]
  exerciseId String [not null]
  child Child [not null]
  childId String [not null]
  answer Answer [not null]
  answerId String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table EarnedBadge {
  id String [pk]
  child Child [not null]
  childId String [not null]
  badge Badge [not null]
  badgeId String [not null]
  createdAt DateTime [default: `now()`]
}

Table Badge {
  id String [pk]
  name String [not null]
  icon String
  criteria String [not null]
  threshold Int [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  EarnedBadge EarnedBadge [not null]
}

Ref: Child.parentId > Parent.id

Ref: Exercise.subjectId > Subject.id

Ref: Answer.exerciseId > Exercise.id

Ref: AnsweredExercise.exerciseId > Exercise.id

Ref: AnsweredExercise.childId > Child.id

Ref: AnsweredExercise.answerId > Answer.id

Ref: EarnedBadge.childId > Child.id

Ref: EarnedBadge.badgeId > Badge.id